force-app/main/default/objects/Campaign/fields/Government_Level__c.field-meta.xml
<CustomField>
    <fullName>Government_Level__c</fullName>
    <description>Government jurisdiction targeted by the advocacy campaign.</description>
    <label>Government Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>