force-app/main/default/objects/Campaign/fields/Issue_Area__c.field-meta.xml
<CustomField>
    <fullName>Issue_Area__c</fullName>
    <description>Policy areas addressed by this advocacy campaign. Uses the shared Issue Area value set for consistent reporting.</description>
    <inlineHelpText>Select every policy area addressed by this campaign.</inlineHelpText>
    <label>Issue Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Issue_Area</valueSetName>
    </valueSet>
</CustomField>