force-app/main/default/objects/Campaign/fields/Legislative_District__c.field-meta.xml
<CustomField>
    <fullName>Legislative_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>District this campaign is targeting.</description>
    <label>Legislative District</label>
    <referenceTo>Legislative_District__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>