force-app/main/default/objects/Campaign/fields/Target_Number_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Target_Number_Contacts__c</fullName>
    <description>Target number of legislators the team plans to contact in this outreach cycle. Used with the standard Sent/Responses campaign statistics to gauge contacted-vs-target progress.</description>
    <inlineHelpText>Number of legislators the team aims to contact for this campaign/outreach cycle.</inlineHelpText>
    <label>Target Number of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>